lots of changes; fixed overlap

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -309,7 +309,7 @@ a.buttons:hover {
 /* Section - for main page content */
 
 section {
-  width:650px;
+  width:550px;
   float:right;
   padding-bottom:50px;
 }
